added javascript to dynamically add projects

--- a/index.html
+++ b/index.html
@@ -38,33 +38,6 @@
 
       <section class="projects">
         <h3>My Recent Works</h3>
-        <div class="card">
-          <img src="./ajju.jpg" alt="" />
-          <div class="cardDetails">
-            <p>To DO List</p>
-            <ul>
-              <li>Ruby on Rails</li>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Javascript</li>
-            </ul>
-            <button>See Project</button>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="./ajju.jpg" alt="" />
-          <div class="cardDetails">
-            <p>To DO List</p>
-            <ul>
-              <li>Ruby on Rails</li>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Javascript</li>
-            </ul>
-            <button>See Project</button>
-          </div>
-        </div>
       </section>
 
       <section class="about-skills">
@@ -82,22 +55,24 @@
           <div class="tech-skills">
             <img src="./images/skills/Icon Langguage.svg" alt="" />
             <p>Language</p>
-            <ul class="skills">
-              <li>Javascript</li>
-              <li>Ruby</li>
-              <li>HTML</li>
+            <ul id="languages" class="skills">
             </ul>
           </div>
 
           <div class="tech-skills">
             <img src="./images/skills/Icon Langguage.svg" alt="" />
-            <p>Language</p>
-            <ul class="skills">
-              <li>Javascript</li>
-              <li>Ruby</li>
-              <li>HTML</li>
+            <p>Frameworks</p>
+            <ul id="frameworks" class="skills">
             </ul>
           </div>
+
+          <div class="tech-skills">
+            <img src="./images/skills/Icon Langguage.svg" alt="" />
+            <p>Skills</p>
+            <ul id="skills" class="skills">
+            </ul>
+          </div>
+
         </div>
       </section>
 
@@ -151,5 +126,6 @@
       </section>
 
     </main>
+    <script src="./index.js"></script>
   </body>
 </html>
