--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   </head>
   <body>
     <main>
+      <header>
+        <nav class="navbar">
+          <ul>
+            <li><a href="#aboutMyself">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
       <section class="about">
         <h1>
           Hey there. I’m Anshuman.
@@ -36,11 +45,12 @@
         </ul>
       </section>
 
-      <section class="projects">
+      <section id="projects" class="projects">
         <h3>My Recent Works</h3>
+        <div class="projectContainer"></div>
       </section>
 
-      <section class="about-skills">
+      <section id="aboutMyself"  class="about-skills">
         <div class="about-details">
           <h3>About me</h3>
           <p>
@@ -76,7 +86,7 @@
         </div>
       </section>
 
-      <section class="contact">
+      <section id="contact" class="contact">
         <h3>
           I'm always interested in hearing about new projects, so if you'd like
           to chat please get in touch.
@@ -107,6 +117,10 @@
         </form>
 
         <p>anshuman@gmail.com</p>
+      </section>
+
+      <footer class="footer">
+        <hr>
         <ul class="social-connect">
           <li>
             <a href="#"><img src="./images/socialIcons/github.svg" alt="" /></a>
@@ -122,8 +136,7 @@
             /></a>
           </li>
         </ul>
-
-      </section>
+      </footer>
 
     </main>
     <script src="./index.js"></script>
